# Nebula_Mapper

./: .gitignore  CMakeLists.txt  README.md
include/common/: result.hpp  string_utils.hpp  yaml_error_utils.hpp
include/graph/: schema_manager.hpp  statement_generator.hpp
include/parser/: dynamic_fields_utils.hpp  json_parser.hpp  json_parser.inl  mapping_errors.hpp  mapping_parser.hpp  yaml_parser.hpp
include/parser/validation/: mapping_validation.hpp
include/transformer/: transform_engine.hpp  transform_engine.inl
src/: main.cpp
src/graph/: schema_manager.cpp  statement_generator.cpp
src/parser/: json_parser.cpp  mapping_parser.cpp  yaml_parser.cpp
src/parser/validation/: mapping_validation.cpp
src/transformer/: transform_engine.cpp
tests/: CMakeLists.txt
tests/parser/: json_parser_test.cpp
tests/test_data/: input.json  mapping.yaml  mapping_kakao.yaml
